# python-minimal-boilerplate

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-basic-ci.yaml
src/python_minimal_boilerplate/: foo.py
