[project]
name = "python-minimal-boilerplate"
version = "0.1.0"
description = "A Python project containing some minimal best-practices boilerplate"
authors = [
    { name = "Arthur Dent", email = "arthur@dent.space" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pre-commit>=3.7.1",
    "pytest>=8.2.2",
    "mypy>=1.10.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/python_minimal_boilerplate"]
